day04/devtools/manifests/base/dov.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: dov-deploy
  namespace: dovns
  labels:
    app: dov 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dov
      dept: eng
  template:
    metadata:
      name: dov-po
      labels:
        app: dov
        dept: eng
    spec: 
      containers:
      - name: dov-container 
        image: chukmunnlee/dov-bear:v5 
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - name: dov-port 
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz 
            port: 3000
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3

---
apiVersion: v1 
kind: Service 
metadata:
  name: dov-svc 
  namespace: dovns 
  labels: 
    app: dov 
spec: 
  type: ClusterIP 
  selector: 
    app: dov
    dept: eng
  ports:
  - port: 8080
    targetPort: dov-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  namespace: dovns
  labels:
    app: dov
    name: dov-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: dov-146.190.195.35.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dov-svc
            port:
              number: 8080
